8153176: ParOldGC: Use correct TaskQueueSet for ParallelTaskTerminator in marking

Reviewed-by: mgerdin, tschatzl